# ananke

./: Cargo.toml
board/: Cargo.toml
eval/: Cargo.toml
eval/src/: evaluation.rs  lib.rs
game/: Cargo.toml
game/src/: board.rs  lib.rs  ruleset.rs  rulesets.rs
game/src/rulesets/: shared.rs  standard.rs
snake_server/: Cargo.toml
snake_server/src/: main.rs  types.rs
temporaldiff/: Cargo.toml
temporaldiff/src/: main.rs
tester/: Cargo.toml
vecmath/: Cargo.toml
vecmath/src/: lib.rs
